--- a/pom.xml
+++ b/pom.xml
@@ -4,19 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.scout24.ha</groupId>
 	<artifactId>meross-java</artifactId>
-	<version>0.1.0-SNAPSHOT</version>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>8</source>
-					<target>8</target>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+	<version>0.2.0-SNAPSHOT</version>
 	<name>meross-java</name>
 	<description>Provide a Openhab2 binding for Meross plugs</description>
 
@@ -39,7 +27,7 @@
 		<dependency>
 			<groupId>com.hivemq</groupId>
 			<artifactId>hivemq-mqtt-client</artifactId>
-			<version>RELEASE</version>
+			<version>1.1.4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -90,10 +78,39 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>RELEASE</version>
+			<version>4.13</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>8</source>
+          <target>8</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok-maven-plugin</artifactId>
+        <version>1.18.10.0</version>
+        <configuration>
+          <encoding>utf8</encoding>
+        </configuration>
+        <executions>
+          <execution>
+          <phase>generate-sources</phase>
+          <goals>
+            <goal>delombok</goal>
+          </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 
 </project>
